# applescript.py

./: .travis.yml  README.md  setup.cfg  setup.py
.github/workflows/: tests42.yml
applescript/: __init__.py  _run.py  tell.py
tests/applescript/examples/: javascript.py  stdout.py
tests/examples/: stderr.py
tests/examples/tell/: app.py
