# https://pypi.org/project/setupcfg-generator/
[metadata]
name = applescript
version = 2019.4.13
url = https://github.com/looking-for-a-job/applescript.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = applescript

[options]
install_requires = 
	only
	public
	runcmd
	setuptools
	temp
packages = 
	applescript
