# https://pypi.org/project/setupcfg-generator/
[metadata]
name = applescript
version = 2020.5.31
url = https://github.com/andrewp-as-is/applescript.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = applescript

[options]
install_requires = 
	only
	public
	setuptools
packages = 
	applescript
